# BXGameEngine

./: .gitignore  CMakeLists.txt  README.md
Cmake/: CreateFiles.cmake  CreateFolders.cmake
Cmake/Find/: FindSQLite3.cmake
Formfiles/: Editor.ui  LevelNameDialog.ui
Game/Headerfiles/: GAnimation.hpp  GCollision.hpp  GSpecificEntityData.hpp
Game/Sourcefiles/: GAnimation.cpp  GCollision.cpp  GSpecificEntityData.cpp
Headerfiles/: Action.hpp  Animation.hpp  Assets.hpp  Convert.hpp  DatabaseFunctions.hpp  DatabaseManager.hpp  GameEngine.hpp  Save.hpp  SharedDataStructure.hpp
Headerfiles/AAD/: Algorithm.hpp  GridField.hpp  Node.hpp  PriorityQueue.hpp
Headerfiles/Common/: CheckIf.hpp  CompositeDataTypes.hpp  Paths.hpp  PrimitiveDatatypes.hpp  RandomNumber.hpp  TrimString.hpp  Vector2.hpp
Headerfiles/Config/: AnimationConfig.hpp  Config.hpp  MenuConfig.hpp
Headerfiles/Data/: DataFromFilesystem.hpp  StoreConfigData.hpp
Headerfiles/ECS/: Components.hpp  Entity.hpp  EntityManager.hpp  EntityMemoryPool.hpp
Headerfiles/Load/: LoadAssets.hpp  LoadUniforms.hpp
Headerfiles/PAM/: Math.hpp  Physics.hpp
Headerfiles/Qt/: ClickableQLabel.hpp  MovableQFrame.hpp  QtHelpFunctions.hpp
Headerfiles/SSC/: Coordinates.hpp  Creation.hpp  RoomManager.hpp
Headerfiles/Scene/: Scene.hpp  SceneInGameMenu.hpp  SceneMenu.hpp  ScenePlay.hpp
Headerfiles/Systems/: SAI.hpp  SAnimation.hpp  SCamera.hpp  SCollision.hpp  SLoader.hpp  SRender.hpp  SSound.hpp  SState.hpp
Headerfiles/Tools/: Logger.hpp  Profiler.hpp  Shell.hpp
Levels/: TestLevel_NPCsConfig.txt  TestLevel_PlayerConfig.txt  TestLevel_TilesConfig.txt
Sourcefiles/: Action.cpp  Animation.cpp  Assets.cpp  Convert.cpp  DatabaseFunctions.cpp  DatabaseManager.cpp  GameEngine.cpp  Save.cpp  StreamOperator.cpp  main.cpp
Sourcefiles/AAD/: Algorithm.cpp  GridField.cpp  Node.cpp  PriorityQueue.cpp
Sourcefiles/Common/: CheckIf.cpp  TrimString.cpp  Vector2.cpp
Sourcefiles/Data/: DataFromFilesystem.cpp  StoreConfigData.cpp
Sourcefiles/ECS/: Entity.cpp  EntityManager.cpp  EntityMemoryPool.cpp
Sourcefiles/Load/: LoadAssets.cpp  LoadUniforms.cpp
Sourcefiles/PAM/: Physics.cpp
Sourcefiles/Qt/: ClickableQLabel.cpp  MovableQFrame.cpp  QtHelpFunctions.cpp
Sourcefiles/SSC/: Coordinates.cpp  Creation.cpp  RoomManager.cpp
(+29 files in other folders)
